# iamraw

./: ..code-workspace  .baw  .dockerignore  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README  README.md  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.cfg  project.config
.github/workflows/: release.yml  test.yml
docs/: bugs.rst  index.rst
docs/releases/: 1.10.0.md  1.10.0.rst  1.11.0.rst  1.12.0.rst  1.13.0.rst  1.14.0.rst  1.15.0.rst  backlog.rst  releases.rst
iamraw/: __hack__.py  __init__.py  __mixin__.py  abbreviation.py  annotation.py  bibliography.py  border.py  bounding.py  boxes.py  caption.py  code.py  content.py  date.py  distance.py  docinfo.py  docref.py  document.py  figure.py  findings.py  fonts.py  fontstore.py  footnotes.py  formula.py  headerfooter.py  headlines.py  hits.py  href.py  images.py  index.py  lang.py  layout.py  likelihood.py  line.py  list.py  magic.py  page.py  pagecontent.py  pagenumbers.py  path.py  pdfinfo.py  (+14 more)
iamraw/document/: document.py  page.py  utils.py
iamraw/serializeraw/: __init__.py  toc.py
iamraw/textnavigator/: navigator.py  style.py  utils.py
serializeraw/: __init__.py  __patch__.py  abbreviation.py  annotation.py  bibliography.py  border.py  bounding.py  boxedcontent.py  boxes.py  caption.py  chapter.py  code.py  color.py  content.py  date.py  distance.py  docinfo.py  docref.py  document.py  figure.py  findings.py  fonts.py  fontstore.py  footnotes.py  formula.py  formularaw.py  headerfooter.py  headlines.py  hits.py  href.py  images.py  index.py  likelihood.py  line.py  list.py  magic.py  pagecontent.py  pagenumbers.py  pdfinfo.py  quote.py  (+15 more)
serializeraw/textnavigator/: create.py  dump.py  filter.py  highnote.py  translation.py
serializeraw/tnav/: create.py  dump.py  filter.py  highnote.py  translation.py
tests/: conftest.py  test_bounding.py  test_document.py  test_fonts.py  test_headlines.py  test_import_all.py  test_textnavigator.py  test_textnavigator_style.py  test_toc.py
tests/fixtures/: style.py  textnavigator.py  textnavigator_style.py
tests/iamraw/: test_abbreviation.py  test_bounding.py  test_caption.py  test_document.py  test_findings.py  test_fonts.py  test_headlines.py  test_import_all.py  test_sections.py
tests/iamraw/toc/: test_toc.py
tests/serializeraw/: __init__.py  fixtures.py  test_all.py  test_annotation.py  test_bibliography.py  test_border.py  test_bounding.py  test_boxedcontent.py  test_boxes.py  test_code.py  test_color.py  test_date.py  test_docref.py  test_doctextstyle.py  test_document.py  test_findings.py  test_fonts.py  test_fontstore.py  test_headerfooter.py  test_headlines.py  test_hits.py  test_image_info.py  test_import.py  test_index.py  test_likelihood.py  test_line.py  test_list.py  test_magic.py  test_pagecontent.py  test_pagenumbers.py  test_sections.py  test_sentence.py  test_table.py  test_text.py  test_textnavigator.py  test_textposition.py  test_titlepage.py  test_toc.py  test_webconfig.py  test_whitepage.py  (+3 more)
tests/serializeraw/data/: hitthebox__hits.yaml  text.yaml  toc.yaml  update.sh
tests/serializeraw/examples/: boxedcontent.py  footnotes.py  list.py  (+4 more)
tests/texmex/: test_iter.py  test_style.py  test_textnavigator.py  test_textnavigator_style.py
texmex/: __init__.py  alignment.py  alpha.py  character.py  iter.py  navigator.py  numbers.py  regex.py  search.py  sentences.py  style.py  text.py  translation.py  utils.py
texmex/group/: fonts.py  multiline.py
texmex/nav/: __init__.py  create.py
texmex/navigator/: __init__.py  create.py
(+15 files in other folders)
